--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,20 @@
   "name": "Math Learning Games",
   "short_name": "MathGames",
   "description": "Progressive math learning games for kids with spaced repetition",
-  "start_url": "/index.html",
+  "start_url": "/math-games/index.html",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/math-games/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "/math-games/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
